--- a/1-data-understanding/data-analysis-report.tex
+++ b/1-data-understanding/data-analysis-report.tex
@@ -1,60 +1,5 @@
 % knitr mixed latex en R tot pdf
-\documentclass[10pt,a4paper,titlepage]{report}\usepackage{graphicx, color}
-%% maxwidth is the original width if it is less than linewidth
-%% otherwise use linewidth (to make sure the graphics do not exceed the margin)
-\makeatletter
-\def\maxwidth{ %
-  \ifdim\Gin@nat@width>\linewidth
-    \linewidth
-  \else
-    \Gin@nat@width
-  \fi
-}
-\makeatother
-
-\IfFileExists{upquote.sty}{\usepackage{upquote}}{}
-\definecolor{fgcolor}{rgb}{0.2, 0.2, 0.2}
-\newcommand{\hlnumber}[1]{\textcolor[rgb]{0,0,0}{#1}}%
-\newcommand{\hlfunctioncall}[1]{\textcolor[rgb]{0.501960784313725,0,0.329411764705882}{\textbf{#1}}}%
-\newcommand{\hlstring}[1]{\textcolor[rgb]{0.6,0.6,1}{#1}}%
-\newcommand{\hlkeyword}[1]{\textcolor[rgb]{0,0,0}{\textbf{#1}}}%
-\newcommand{\hlargument}[1]{\textcolor[rgb]{0.690196078431373,0.250980392156863,0.0196078431372549}{#1}}%
-\newcommand{\hlcomment}[1]{\textcolor[rgb]{0.180392156862745,0.6,0.341176470588235}{#1}}%
-\newcommand{\hlroxygencomment}[1]{\textcolor[rgb]{0.43921568627451,0.47843137254902,0.701960784313725}{#1}}%
-\newcommand{\hlformalargs}[1]{\textcolor[rgb]{0.690196078431373,0.250980392156863,0.0196078431372549}{#1}}%
-\newcommand{\hleqformalargs}[1]{\textcolor[rgb]{0.690196078431373,0.250980392156863,0.0196078431372549}{#1}}%
-\newcommand{\hlassignement}[1]{\textcolor[rgb]{0,0,0}{\textbf{#1}}}%
-\newcommand{\hlpackage}[1]{\textcolor[rgb]{0.588235294117647,0.709803921568627,0.145098039215686}{#1}}%
-\newcommand{\hlslot}[1]{\textit{#1}}%
-\newcommand{\hlsymbol}[1]{\textcolor[rgb]{0,0,0}{#1}}%
-\newcommand{\hlprompt}[1]{\textcolor[rgb]{0.2,0.2,0.2}{#1}}%
-
-\usepackage{framed}
-\makeatletter
-\newenvironment{kframe}{%
- \def\at@end@of@kframe{}%
- \ifinner\ifhmode%
-  \def\at@end@of@kframe{\end{minipage}}%
-  \begin{minipage}{\columnwidth}%
- \fi\fi%
- \def\FrameCommand##1{\hskip\@totalleftmargin \hskip-\fboxsep
- \colorbox{shadecolor}{##1}\hskip-\fboxsep
-     % There is no \\@totalrightmargin, so:
-     \hskip-\linewidth \hskip-\@totalleftmargin \hskip\columnwidth}%
- \MakeFramed {\advance\hsize-\width
-   \@totalleftmargin\z@ \linewidth\hsize
-   \@setminipage}}%
- {\par\unskip\endMakeFramed%
- \at@end@of@kframe}
-\makeatother
-
-\definecolor{shadecolor}{rgb}{.97, .97, .97}
-\definecolor{messagecolor}{rgb}{0, 0, 0}
-\definecolor{warningcolor}{rgb}{1, 0, 1}
-\definecolor{errorcolor}{rgb}{1, 0, 0}
-\newenvironment{knitrout}{}{} % an empty environment to be redefined in TeX
-
-\usepackage{alltt}
+\documentclass[10pt,a4paper,titlepage]{report}
 
 \usepackage[latin1]{inputenc}
 \usepackage[english]{babel}
@@ -85,67 +30,42 @@
 \author{Hugo Koopmans}
 \title{Data Analysis Report}
 \begin{document}
-
+\SweaveOpts{concordance=TRUE}
 \maketitle
 \tableofcontents
 \newpage
 \section{Introduction}
 This data analysis report is generated using R, R-studio and knitr to sweave R code and Latex into pdf format. We have the option to include all R code that is used to generate the plots and calculations. Default this feauture is dissabled.\\
 The data analysis step is the first step an a datamining analysis.
-\section{Dataset Basic Artifactes}
+\section{Dataset Basic Artifacts}
 
 \subsection{Basic dataset information}
 Basic information on dataset:\\
-\begin{knitrout}
-\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 
-
-{\ttfamily\noindent\textcolor{warningcolor}{\#\# Warning: cannot open file 'data-analysis-template.R': No such file or directory}}
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\#\# Error: cannot open the connection}}\end{kframe}
-\end{knitrout}
 
 
 
 
 
 \\
-Read data from file : 
+Read data from file : d5.tab.\\
+The dataset has 37 variables and 59992 rows.
 
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'filename' not found}}.\\
-The dataset has 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'colums' not found}} variables and 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'rows' not found}} rows.
-
-The case identifyer is 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'original\_case\_id' not found}} this is unique for all cases.
+The case identifyer is registrnr this is unique for all cases.
 
 \subsection{Excluded variables}
-From the varables provided the folowing list will be excluded in this anlysis: 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'exclude\_var\_names' not found}}
+From the varables provided the folowing list will be excluded in this anlysis: caseID, registrnr, X2011tmoktstornaant, X2010stornoaantal
 
 \subsection{Variabele types}
 
 
 The following variabele are present in the dataset:\\
-
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'var\_names' not found}} 
+jaarbedr, minbegjr, proj, nudona, r20102009mndbedrag, r20112010mndbedrag, X2009avgbedragmnd, X2010avgbedragmnd, X2011avgbedragmnd, bronaktie, bronlaatstebetwijze, Jaarbinnen, sexe, leeftijd2011, Bronbinnen, mailingen, magpost, magdigi, diginws, TM, mail07, catHHINKOMEN, catHHSOCIALE, catHHOPLEIDI, catHHLEVENSF, catHHGEOTYPE, catHHTYPEWO, catHHEIGENDO, catHHWOZWAA, catBELEGGERS, catLENERS, catSPAARDERS, catSWITCHGEVO, catMERKENTROU 
 \\
 Sometimes categoric variables are present as coded numbers. These should be treated as factors.
-In this dataset the following variables will be used as factors(categoric): 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : \\  object 'treat\_as\_categorical' not found}}
+In this dataset the following variables will be used as factors(categoric): catHHINKOMEN, catHHSOCIALE, catHHOPLEIDI, catHHLEVENSF, catHHGEOTYPE, catHHTYPEWO, catHHEIGENDO, catHHWOZWAA, catBELEGGERS, catLENERS, catSPAARDERS, catSWITCHGEVO, catMERKENTROU
 \\
-We have 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'num\_vars' not found}} numeric variables and 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'cat\_vars' not found}} categorical variables (or factors in R).
+We have 13 numeric variables and 21 categorical variables (or factors in R).
 \newpage
 \section{Numeric variables}
 Here we analyse all numeric variables. We start with an overview on basic statistics per variable. We check for missing values. We do a histogram plot to show the distribution for this variable. And we test for outliers.
@@ -153,16 +73,427 @@ Here we analyse all numeric variables. We start with an overview on basic statis
 \subsection{Overview}
 In the table below we report the number of observations (n), the smallest observation (min),  the first quantile (q1), the media ,  the mean, last quantile, the largest observation (max), and the nber of missing values (na).\\
 
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
 
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: xtable}}
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: survival}}
+
+{\ttfamily\noindent\itshape\color{messagecolor}{\#\# Loading required package: splines}}\begin{verbatim}
+## % latex table generated in R 2.14.1 by xtable 1.7-1 package
+## % Mon May 27 21:51:41 2013
+## {\footnotesize
+## \begin{longtable}{lrrrrrrrr}
+##  \textbf{Variable} & $\mathbf{n}$ & \textbf{Min} & $\mathbf{q_1}$ & $\mathbf{\widetilde{x}}$ & $\mathbf{\bar{x}}$ & $\mathbf{q_3}$ & \textbf{Max} & \textbf{\#NA} \\ 
+##   \hline
+## jaarbedr & 59992 &    0.0 &   60 &   60 &   79.2 &   72.0 & 4898.8 &     0 \\ 
+##   minbegjr & 59992 & 1900.0 & 1999 & 2008 & 2003.2 & 2009.0 & 2011.0 &     0 \\ 
+##   proj & 59992 &    0.0 &    0 &    0 &    0.3 &    1.0 &   14.0 &     0 \\ 
+##   nudona & 59992 &    0.0 &    1 &    1 &    0.9 &    1.0 &    1.0 &     0 \\ 
+##   r20102009mndbedrag & 48938 &    0.0 &    1 &    1 &    1.0 &    1.0 &   11.2 & 11054 \\ 
+##   r20112010mndbedrag & 55821 &    0.0 &    1 &    1 &    1.0 &    1.0 &   12.9 &  4171 \\ 
+##   X2009avgbedragmnd & 49090 &    0.1 &    5 &    5 &    6.4 &    6.0 &  459.0 & 10902 \\ 
+##   X2010avgbedragmnd & 55868 &    0.0 &    5 &    5 &    6.4 &    6.0 &  544.2 &  4124 \\ 
+##   X2011avgbedragmnd & 59873 &    0.1 &    5 &    5 &    6.6 &    6.7 &  481.2 &   119 \\ 
+##   Jaarbinnen & 59443 & 1988.0 & 1990 & 2006 & 2000.8 & 2009.0 & 2011.0 &   549 \\ 
+##   leeftijd2011 & 41620 &    4.0 &   41 &   52 &   53.2 &   65.0 &  111.0 & 18372 \\ 
+##   mailingen & 59443 &    0.0 &   99 &   99 &   86.2 &   99.0 &   99.0 &   549 \\ 
+##   magpost & 59443 &    0.0 &    9 &    9 &    8.0 &    9.0 &    9.0 &   549 \\ 
+##   \hline
+## \caption{} 
+## \label{}
+## \end{longtable}
+## }
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
 
 
  
 
 
 
+% child template for numeric variables
+
+\subsection{Variabele jaarbedr}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  0 \\
+Minimum value : 0\\
+Percentile 1 : 10\\
+Percentile 99 : 300\\
+Maximum value : 4898.8
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-2} 
+
+\end{knitrout}
+
+    \caption{Histogram jaarbedr}
+    \label{fig:figPlot1}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele minbegjr}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  0 \\
+Minimum value : 1900\\
+Percentile 1 : 1900\\
+Percentile 99 : 2011\\
+Maximum value : 2011
+
+\color{red}
 
 
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in paste(out, collapse = "\textbackslash{}n") : object 'out' not found}}
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning: position\_stack requires constant width: output may be incorrect}}\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-4} 
+
+\end{knitrout}
+
+    \caption{Histogram minbegjr}
+    \label{fig:figPlot2}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele proj}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  0 \\
+Minimum value : 0\\
+Percentile 1 : 0\\
+Percentile 99 : 1\\
+Maximum value : 14
+
+\color{red}
+Warning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-6} 
+
+\end{knitrout}
+
+    \caption{Histogram proj}
+    \label{fig:figPlot3}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele nudona}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  0 \\
+Minimum value : 0\\
+Percentile 1 : 0\\
+Percentile 99 : 1\\
+Maximum value : 1
+
+\color{red}
+
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning: position\_stack requires constant width: output may be incorrect}}\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-8} 
+
+\end{knitrout}
+
+    \caption{Histogram nudona}
+    \label{fig:figPlot4}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele r20102009mndbedrag}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  11054 \\
+Minimum value : 0.0463\\
+Percentile 1 : 0.7\\
+Percentile 99 : 1.4\\
+Maximum value : 11.25
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning: position\_stack requires constant width: output may be incorrect}}\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-10} 
+
+\end{knitrout}
+
+    \caption{Histogram r20102009mndbedrag}
+    \label{fig:figPlot5}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele r20112010mndbedrag}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  4171 \\
+Minimum value : 0.0198\\
+Percentile 1 : 0.5556\\
+Percentile 99 : 2.1778\\
+Maximum value : 12.9231
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-12} 
+
+\end{knitrout}
+
+    \caption{Histogram r20112010mndbedrag}
+    \label{fig:figPlot6}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele X2009avgbedragmnd}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  10902 \\
+Minimum value : 0.0625\\
+Percentile 1 : 0.8333\\
+Percentile 99 : 25\\
+Maximum value : 459
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-14} 
+
+\end{knitrout}
+
+    \caption{Histogram X2009avgbedragmnd}
+    \label{fig:figPlot7}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele X2010avgbedragmnd}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  4124 \\
+Minimum value : 0.025\\
+Percentile 1 : 0.8333\\
+Percentile 99 : 25\\
+Maximum value : 544.2427
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-16} 
+
+\end{knitrout}
+
+    \caption{Histogram X2010avgbedragmnd}
+    \label{fig:figPlot8}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele X2011avgbedragmnd}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  119 \\
+Minimum value : 0.0595\\
+Percentile 1 : 0.8333\\
+Percentile 99 : 25\\
+Maximum value : 481.25
+
+\color{red}
+Warning : Suspect extreme values in left tailWarning : Suspect extreme values in right tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-18} 
+
+\end{knitrout}
+
+    \caption{Histogram X2011avgbedragmnd}
+    \label{fig:figPlot9}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele Jaarbinnen}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  549 \\
+Minimum value : 1988\\
+Percentile 1 : 1988\\
+Percentile 99 : 2011\\
+Maximum value : 2011
+
+\color{red}
+
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning: position\_stack requires constant width: output may be incorrect}}\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-20} 
+
+\end{knitrout}
+
+    \caption{Histogram Jaarbinnen}
+    \label{fig:figPlot10}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele leeftijd2011}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  18372 \\
+Minimum value : 4\\
+Percentile 1 : 21\\
+Percentile 99 : 90\\
+Maximum value : 111
+
+\color{red}
+Warning : Suspect extreme values in left tail
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-22} 
+
+\end{knitrout}
+
+    \caption{Histogram leeftijd2011}
+    \label{fig:figPlot11}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele mailingen}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  549 \\
+Minimum value : 0\\
+Percentile 1 : 0\\
+Percentile 99 : 99\\
+Maximum value : 99
+
+\color{red}
+
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-24} 
+
+\end{knitrout}
+
+    \caption{Histogram mailingen}
+    \label{fig:figPlot12}
+\end{figure}
+
+% child template for numeric variables
+
+\subsection{Variabele magpost}
+%\textbf{Variabele num_var_names[i]}
+
+Missing :  549 \\
+Minimum value : 0\\
+Percentile 1 : 0\\
+Percentile 99 : 9\\
+Maximum value : 9
+
+\color{red}
+
+
+\color{black}
+
+\begin{figure}[H]
+   \centering
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+
+
+{\ttfamily\noindent\color{warningcolor}{\#\# Warning: position\_stack requires constant width: output may be incorrect}}\end{kframe}
+\includegraphics[width=\maxwidth]{figure/unnamed-chunk-26} 
+
+\end{knitrout}
+
+    \caption{Histogram magpost}
+    \label{fig:figPlot13}
+\end{figure}
+
 
 % analyse categorical variabels
 \newpage
@@ -173,31 +504,50 @@ Overview\\
 In the following table we will see each variable printed with it's unique levels. Beside each level a count is made and a precentage calculated. In the last colum we find a culumative count summing the total up to 100\%. 
 
 
-We see that the number of levels can be quite big, for reporting we will omit all variables with more then  
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'max\_levels' not found}} levels. These will not be reported in the subsections below.
-
+We see that the number of levels can be quite big, for reporting we will omit all variables with more then  25 levels. These will not be reported in the subsections below.
+\begin{knitrout}
+\definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}\begin{kframe}
+\begin{verbatim}
+## % latex table generated in R 2.14.1 by xtable 1.7-1 package
+## % Mon May 27 21:51:48 2013
+## \begin{table}[ht]
+## \centering
+## \begin{tabular}{rrr}
+##   \hline
+##  & levels & \# missings \\ 
+##   \hline
+## bronaktie & 403 & 0 \\ 
+##   bronlaatstebetwijze & 11 & 0 \\ 
+##   sexe & 5 & 0 \\ 
+##   Bronbinnen & 11 & 0 \\ 
+##   magdigi & 3 & 0 \\ 
+##   diginws & 3 & 0 \\ 
+##   TM & 3 & 0 \\ 
+##   mail07 & 3 & 0 \\ 
+##   catHHINKOMEN & 7 & 0 \\ 
+##   catHHSOCIALE & 6 & 0 \\ 
+##   catHHOPLEIDI & 4 & 0 \\ 
+##   catHHLEVENSF & 10 & 0 \\ 
+##   catHHGEOTYPE & 21 & 0 \\ 
+##   catHHTYPEWO & 11 & 0 \\ 
+##   catHHEIGENDO & 3 & 0 \\ 
+##   catHHWOZWAA & 13 & 0 \\ 
+##   catBELEGGERS & 10 & 0 \\ 
+##   catLENERS & 10 & 0 \\ 
+##   catSPAARDERS & 10 & 0 \\ 
+##   catSWITCHGEVO & 10 & 0 \\ 
+##   catMERKENTROU & 10 & 0 \\ 
+##    \hline
+## \end{tabular}
+## \end{table}
+\end{verbatim}
+\end{kframe}
+\end{knitrout}
 
 
 Variables with to many levels to report are : 
 
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : \\  object 'cat\_var\_names\_not\_reported' not found}}
 
 
 
 
-
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in paste(out, collapse = "\textbackslash{}n") : object 'out' not found}}
-
-\section{Behavioural Analysis}
-The next step is behavioural analysis.
-The current dataset is now saved.\\
-
-
-
-Dataset saved as : 
-
-{\ttfamily\noindent\bfseries\textcolor{errorcolor}{\\Error in eval(expr, envir, enclos) : object 'datasetName' not found}}
-
-\end{document}
