--- a/0-datamineR-introduction/datamineR-introduction.tex
+++ b/0-datamineR-introduction/datamineR-introduction.tex
@@ -77,7 +77,7 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 
-\lhead{\includegraphics[height=0.8cm]{./figure/dikw-logo.png}}
+\lhead{\includegraphics[height=0.8cm]{../figure/dikw-logo.png}}
 \chead{}
 \rhead{\bfseries DataMineR Introduction}
 \lfoot{}
@@ -95,13 +95,13 @@
 \newpage
 \section{Introduction}
 The dataMineR script toolbox aims to be a efficient set of R \& knitr scripts, that can be used by experienced and less experience dataminers. The toolbox uses the best of the R community to efficently analayse any arbritray dataset and make a predictive model on the target variable.
-The toolbox uses R R version 2.14.1 (2011-12-22), R-studio and knitr(http://yihui.name/knitr/) to knit R code and Latex into nice and readable pdf reports. We have the option to include all R code that is used to generate the plots and calculations(see "chunk\_options"). Default this feauture is dissabled.\\
+The toolbox uses R R version 2.15.2 (2012-10-26), R-studio and knitr(http://yihui.name/knitr/) to knit R code and Latex into nice and readable pdf reports. We have the option to include all R code that is used to generate the plots and calculations(see "chunk\_options"). Default this feauture is dissabled.\\
 \section{CRoss Industry Standard Process for datamining}
 In this toolkit we will use the CRISP methodology to guide the datamining proces.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width=8cm]{./figure/CRISP-circle.png}
+  \includegraphics[width=8cm]{../figure/CRISP-circle.png}
   \caption{CRoss Industry Standard Process for datamining}
 \end{figure}
 
@@ -144,7 +144,8 @@ the created models.
 \end{itemize}
 
 \subsection{Business Understanding}
-\textbf{Determine Business Objectives} \\
+
+\emph{Determine Business Objectives}
 - Background \\
 - Business Objectives \\
 - Business Success Criteria \\
