--- a/1-data-understanding/data-analysis-report.Rmd
+++ b/1-data-understanding/data-analysis-report.Rmd
@@ -73,3 +73,37 @@ for (i in c(1:num_vars)) {
 `r paste(out, collapse = '\n')`
 
 
+Categorical variables
+======================================
+Here we analyse all categorical variables. We first check the number of different levels in each category(or factor). Then we do a bar plot to show the distribution for each variable.  
+
+Overview
+--------------------------------------
+In the following table we will see each variable printed with it's unique levels. Beside each level a count is made and a precentage calculated. In the last colum we find a culumative count summing the total up to 100\%. 
+
+```{r cat-overview, results='tex'}
+
+```
+
+We see that the number of levels can be quite big, for reporting we will omit all variables with more then  `r max_levels` levels. These will not be reported in the subsections below.
+```{r cat-levels-md, results='asis'}
+
+```
+
+Variables with to many levels to report are : `r c_var_names.not_reported` .  
+
+```{r run-categoric-md, include=FALSE}
+
+```
+
+`r paste(out, collapse = '\n')`
+
+Behavioural Analysis
+----------------------------
+The next step is behavioural analysis.
+The current dataset is now saved.
+```{r save-data}
+
+```
+
+Dataset saved as : `r datasetName`
