additional changes back where we were, i hope

--- a/2-data-preperation/data-preperation-report.Rmd
+++ b/2-data-preperation/data-preperation-report.Rmd
@@ -25,8 +25,7 @@ Basic information from the dataset we are using.
 # set global chunk options 
 opts_chunk$set(echo=FALSE, cache=FALSE, tidy=TRUE, warning=FALSE, error=TRUE)
 # read externalized R from R script
-read_chunk("behaviour-analysis-template.R")
-# read_chunk("data-preperation.R")
+read_chunk("data-preperation.R")
 ```
 
 
@@ -80,4 +79,8 @@ The selected inputs have the following raw predictive capacity for predicting th
 ```{r raw_pred_cap, results='asis'}
 
 ```
+
+Recode
+------------------------------
+Now we look at individual variables and calculate optimal binning for each.
 
