Updating 2- for Mardown

--- a/2-data-preperation/Data-Preperation-Report.Rmd
+++ b/2-data-preperation/Data-Preperation-Report.Rmd
@@ -36,14 +36,15 @@ read_chunk("data-preperation.R")
 ```{r read_data}
 
 ```
-We are using data from file : `r filename`
-The dataset has `r colums` variables and `r rows` rows.
+We are using data from file : `r filename`. The dataset has `r colums` variables and `r rows` rows.
 
 Variabele types
 -----------------------------
+
 ```{r var_types}
 
 ```
+
 The following variabeles are present in the dataset:
 `r var_names` 
 
@@ -51,6 +52,7 @@ We have `r num_vars` numeric variables and `r cat_vars` categorical variables (o
 
 Target defenition
 -----------------------------
+
 This analysis aims to report of the behaviour of each individual 'predictor' to a target variable. The target variable should be a categorical variable having two categories(or factor levels).  
 
 The target variable is defined in the previous step.
@@ -66,6 +68,7 @@ Missing values
 -------------------------
 
 Before we can do model analysis we need to take care of missing values. The simplest appraoch is to delete cases including one or more missing entries but this can remove a large proportion of valuable data.
+
 We can also remove individual variables if they have a high percentage of missing atributes.
 Or we can replace or impute missing data with for instance an average or most frequent value. Actually changing the data. For this we can use kNN nearest neighbors. 
 
@@ -76,6 +79,7 @@ This dataset has `r nrow(data)-nrow(data[complete.cases(data),])` missing cases 
 ```{r missing_def}
 
 ```
+
 
 Behaviour analysis
 ==================
