--- a/templates/pdf/extended.tex
+++ b/templates/pdf/extended.tex
@@ -20,12 +20,13 @@
 
 % Fonts
 \usepackage[T1]{fontenc}
-%\usepackage{lmodern}         % Default
+\usepackage{lmodern}         % Default
 %\usepackage[math]{iwona}
 %\usepackage{pxfonts}         % Nice font
 %\usepackage{kmath,kerkis}    % Serif font, look nice
 % \usepackage{arev}            % Plain, simple, not TeX-alike
-\usepackage{lucidabr}
+
+% hk \usepackage{lucidabr}
 
 %\usepackage[dutch]{babel}
 %\selectlanguage{dutch}
