finalized stages with example data pdf results included

--- a/0-datamineR-introduction/datamineR-introduction.Rmd
+++ b/0-datamineR-introduction/datamineR-introduction.Rmd
@@ -1,3 +1,8 @@
+% datamineR introduction
+% Hugo Koopmans
+% 18/6/2013
+
+
 Introduction to dataMineR 
 ========================================================
 
