--- a/1-data-understanding/Data-Analysis-Report.Rmd
+++ b/1-data-understanding/Data-Analysis-Report.Rmd
@@ -16,7 +16,7 @@ Basic information from the dataset we are using.
 
 ```{r setup, echo=FALSE, cache=FALSE}
 # set global chunk options APPERENTLY CANNOT BE EXTERNALIZED
-opts_chunk$set(echo=FALSE, cache=FALSE, tidy=TRUE, error=TRUE)
+opts_chunk$set(echo=FALSE, cache=FALSE, tidy=TRUE, warning=false, message=FALSE,error=TRUE)
 # read externalized R from R script
 read_chunk("data-analysis.R")
 ```
