--- a/templates/pdf/simple.tex
+++ b/templates/pdf/simple.tex
@@ -49,7 +49,7 @@ $endif$
 
 $if(toc)$
 {
-\hypersetup{linkcolor=black}
+%\hypersetup{linkcolor=black}
 \setcounter{tocdepth}{$toc-depth$}
 \tableofcontents
 }
